<resources>
    <string name="app_name">PAT</string>
    <string name="appHeader">Place Animal and Thing</string>
    <string name="newGameText">Play</string>
    <string name="highScoreText">High Scores</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="score">Score : </string>
    <string name="life">Life : </string>
    <string name="place">Place</string>
    <string name="animal">Animal</string>
    <string name="thing">Thing</string>
    <string name="initialScore">0</string>
    <string name="lifeScore">3</string>
    <string name="fly">Place</string>
    <string name="noFly">I Cannot</string>
    <string name="gameOverTitle">Your Score</string>
    <string name="newGameString">New Game</string>
    <string name="gameEndString">Exit</string>
    <string name="preference_file_key">saveData</string>
    <string name="saved_high_score">High Score</string>
    <string name="savedTime">Time</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="endGameText">Exit ?</string>
    <string name="title_activity_newgame">Newgame</string>
    <string name="_24">24</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
</resources>